--- a/product_ar.html
+++ b/product_ar.html
@@ -119,7 +119,7 @@
         class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden"
       >
         <div
-          class="bg-white rounded-lg p-6 max-w-md w-96 mx-4 relative shadow-2xl"
+          class="bg-white rounded-lg p-6 max-w-md w-96 h-96 mx-4 relative shadow-2xl"
         >
           <button
             id="close-popup"
@@ -152,6 +152,13 @@
           >
             حمل تطبيق السوق المفتوح مجاناً
           </p>
+          <div class="flex justify-center">
+            <img
+              class="w-20"
+              src="/images/logo-removebg-preview.png"
+              alt="logo"
+            />
+          </div>
           <div
             class="mt-3 items-center space-y-4 justify-center w-fit mx-auto gap-3 sm:gap-4"
           >
