--- a/index_ar.html
+++ b/index_ar.html
@@ -42,12 +42,19 @@
 <body class="bg-gray-100">
      
     <div id="download-app-popup" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
-        <div class="bg-white rounded-lg p-6 max-w-md w-96 mx-4 relative shadow-2xl">
+        <div class="bg-white rounded-lg p-6 max-w-md w-96 h-96 mx-4 relative shadow-2xl">
           <button id="close-popup" class="absolute top-2 right-2 text-gray-600 hover:text-gray-800">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
             </svg>
           </button>
+          <div class="flex justify-center">
+            <img
+              class="w-20"
+              src="/images/logo-removebg-preview.png"
+              alt="logo"
+            />
+          </div>
           <h2 class="text-2xl font-bold text-black text-center mb-4" data-key="Download_App_Popup_Title">أسرع . أسهل . مجانا</h2>
           <p class="text-gray-700 text-center mb-6 mt-8 text-lg" data-key="Download_App_Popup_Description">حمل تطبيق السوق المفتوح مجاناً</p>
           <div class="mt-3 items-center space-y-4 justify-center w-fit mx-auto gap-3 sm:gap-4">
