--- a/index_ar.html
+++ b/index_ar.html
@@ -55,7 +55,7 @@
               alt="logo"
             />
           </div>
-          <h2 class="text-2xl font-bold text-black text-center mb-4" data-key="Download_App_Popup_Title">أسرع . أسهل . مجانا</h2>
+          <h2 class="text-2xl font-bold text-black text-center mt-3" data-key="Download_App_Popup_Title">أسرع . أسهل . مجانا</h2>
           <p class="text-gray-700 text-center mb-6 mt-8 text-lg" data-key="Download_App_Popup_Description">حمل تطبيق السوق المفتوح مجاناً</p>
           <div class="mt-3 items-center space-y-4 justify-center w-fit mx-auto gap-3 sm:gap-4">
             <a href="https://apps.apple.com/app/idXXXXXXXXX" target="_blank" rel="noopener noreferrer">
