--- a/index_en.html
+++ b/index_en.html
@@ -55,7 +55,7 @@
               alt="logo"
             />
           </div>
-                <h2 class="text-2xl font-bold text-[#FCB034] text-center mb-4" data-key="Download_App_Popup_Title">Download Our App</h2>
+                <h2 class="text-2xl font-bold text-[#FCB034] text-center mt-3" data-key="Download_App_Popup_Title">Download Our App</h2>
                 <p class="text-gray-700 text-center mb-6" data-key="Download_App_Popup_Description">Get the best experience by downloading our  App </p>
                 <div class="mt-3 items-center space-y-4 justify-center w-fit mx-auto gap-3 sm:gap-4">
                     <a href="https://apps.apple.com/app/idXXXXXXXXX" target="_blank" rel="noopener noreferrer"></a>
