--- a/product_ar.html
+++ b/product_ar.html
@@ -148,7 +148,7 @@
             />
           </div>
           <h2
-            class="text-2xl font-bold text-black text-center mb-4"
+            class="text-2xl font-bold text-black text-center mt-3"
             data-key="Download_App_Popup_Title"
           >
             أسرع . أسهل . مجانا
