--- a/city_en.html
+++ b/city_en.html
@@ -269,7 +269,7 @@
         </div>
       </div>
       <!-- Top cities -->
-      <div class="container mx-auto  px-4 sm:px-6 lg:px-0 lg:mt-16">
+      <div class="container mx-auto  px-4 sm:px-6 lg:px-0 lg:mt-4">
         <p class="text-lg pt-5 lg:pt-10 md:text-xl font-semibold text-[#FCB034] tracking-wide ">Top Cities</p>
         <h1 class="text-lg   md:text-xl font-semibold  tracking-wide">Top Heavy Equipment Cities</h1>
         <div class="mt-4">
@@ -1961,9 +1961,9 @@
     
     function toggleLanguage(lang) {
       if (lang === 'en') {
-        window.location.href = 'product_en.html';
+        window.location.href = 'city_en.html';
       } else if (lang === 'ar') {
-        window.location.href = 'product_ar.html';
+        window.location.href = 'city_ar.html';
       }
     }
 
