--- a/city_ar.html
+++ b/city_ar.html
@@ -458,6 +458,18 @@
             </div>
           </div>
         </div>
+        <div class="mt-8 text-center">
+          <button
+            class="bg-[#FCB034] flex align-center items-center mx-auto w-fit text-white font-semibold py-2 px-5 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400"
+          >
+            <span>عرض المزيد</span>
+            <img
+              class="w-4 mr-3 -rotate-180"
+              src="./images/arrow-right.svg"
+              alt=""
+            />
+          </button>
+        </div>
       </div>
       <!-- Call to action for app -->
       <div
