--- a/city_en.html
+++ b/city_en.html
@@ -329,6 +329,14 @@
                 
                 </div>
             </div>
+             <div class="mt-8 text-center">
+            <button
+              class="bg-[#FCB034] flex align-center items-center mx-auto w-fit text-white font-semibold py-2 px-5 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400"
+            >
+              <span>View More</span>
+              <img class="w-4 ml-3" src="./images/arrow-right.svg" alt="" />
+            </button>
+          </div>
         </div>
       </div>
       <!-- Call to action for app -->
