--- a/product_en.html
+++ b/product_en.html
@@ -211,25 +211,30 @@
         >
           <div class="w-full lg:w-1/3 mb-4 md:mb-0">
             <img
+            id="heroImage"
               src="./images/forklift hero.png"
               alt="Forklift Image"
               class="rounded-lg w-[23.5rem] object-cover"
+              
             />
             <div class="flex mt-4 overflow-x-auto space-x-3">
               <img
                 src="./images/forklift 1.png"
                 alt="Thumbnail 1"
                 class="w-[7.2rem] h-22 rounded"
+                onclick="changeHeroImage('./images/forklift 1.png')"
               />
               <img
                 src="./images/forklift 1.png"
                 alt="Thumbnail 2"
                 class="w-[7.2rem] h-22 rounded"
+                 onclick="changeHeroImage('./images/forklift 1.png')"
               />
               <img
                 src="./images/forklift 1.png"
                 alt="Thumbnail 3"
                 class="w-[7.2rem] h-22 rounded"
+                 onclick="changeHeroImage('./images/forklift 1.png')"
               />
             </div>
           </div>
@@ -1896,7 +1901,9 @@
   <script src="./js/scripts.js"></script>
 
   <script>   
-    
+    function changeHeroImage(newSrc) {
+      document.getElementById('heroImage').src = newSrc;
+    }
     function toggleLanguage(lang) {
       if (lang === 'en') {
         window.location.href = 'product_en.html';
