--- a/city_en.html
+++ b/city_en.html
@@ -211,6 +211,7 @@
         >
           <div class="w-full lg:w-1/3 mb-4 md:mb-0">
             <img
+            id="heroImage"
               src="./images/forklift hero.png"
               alt="Forklift Image"
               class="rounded-lg w-[23.5rem] object-cover"
@@ -219,17 +220,20 @@
               <img
                 src="./images/forklift 1.png"
                 alt="Thumbnail 1"
-                class="w-[7.2rem] h-22 rounded"
+                class="w-[7.2rem] h-22 rounded "
+                 onclick="changeHeroImage('./images/forklift 1.png')"
               />
               <img
                 src="./images/forklift 1.png"
                 alt="Thumbnail 2"
                 class="w-[7.2rem] h-22 rounded"
+                 onclick="changeHeroImage('./images/forklift 1.png')"
               />
               <img
                 src="./images/forklift 1.png"
                 alt="Thumbnail 3"
                 class="w-[7.2rem] h-22 rounded"
+                 onclick="changeHeroImage('./images/forklift 1.png')"
               />
             </div>
           </div>
@@ -1966,7 +1970,9 @@
   <script src="./js/scripts.js"></script>
 
   <script>   
-    
+     function changeHeroImage(newSrc) {
+      document.getElementById('heroImage').src = newSrc;
+    }
     function toggleLanguage(lang) {
       if (lang === 'en') {
         window.location.href = 'city_en.html';
