--- a/footer_en.html
+++ b/footer_en.html
@@ -4,19 +4,19 @@
   <div class="flex container mx-auto flex-wrap justify-between gap-6 sm:gap-10">
     <div class="max-w-md w-full sm:w-auto">
       <h1 class="text-[#FCB034] text-lg sm:text-xl md:text-3xl font-bold">
-        وسائل تواصلنا الاجتماعية
+        Our Socials
       </h1>
       <div class="w-full h-auto flex gap-2 pt-3 flex-wrap">
-        <img class="w-6" src="./images/insta.svg" alt="إنستغرام" />
-        <img class="w-7" src="./images/whatsapp.svg" alt="واتساب" />
-        <img class="w-6" src="./images/facebook.svg" alt="فيسبوك" />
-        <img class="w-6" src="./images/twitter.svg" alt="تويتر" />
-        <img class="w-6" src="./images/linkdin.svg" alt="لينكدإن" />
+        <img class="w-6" src="./images/insta.svg" alt="Instagram" />
+        <img class="w-7" src="./images/whatsapp.svg" alt="WhatsApp" />
+        <img class="w-6" src="./images/facebook.svg" alt="Facebook" />
+        <img class="w-6" src="./images/twitter.svg" alt="Twitter" />
+        <img class="w-6" src="./images/linkdin.svg" alt="LinkedIn" />
       </div>
 
       <div class="mt-8">
         <h1 class="text-[#FCB034] text-lg sm:text-xl md:text-3xl font-bold">
-          البريد الإلكتروني
+          Email
         </h1>
         <p class="text-[#000000] text-sm lg:text-lg">
           info@saudi-equipment.com
@@ -25,53 +25,56 @@
 
       <div class="mt-8">
         <h1 class="text-[#FCB034] text-lg sm:text-xl md:text-3xl font-bold">
-          تحميل التطبيق
+          Download App
         </h1>
         <div class="mt-4 flex flex-wrap gap-3 sm:gap-4 justify-start">
           <button
             class="bg-black text-white rounded-lg px-3 py-2 flex items-center w-[180px] sm:min-w-[185px] hover:bg-gray-800 transition"
+            dir="ltr"
           >
             <img
               src="./images/appleicon.png"
-              alt="أيقونة آبل"
-              class="h-6 sm:h-8 ml-2 sm:ml-3"
+              alt="Apple icon"
+              class="h-6 sm:h-8 mr-2 sm:mr-3"
             />
-            <div class="text-right">
-              <p class="text-[10px] sm:text-xs uppercase">تحميل من</p>
+            <div class="text-left">
+              <p class="text-[10px] sm:text-xs uppercase">Download on</p>
               <p class="text-xs sm:text-sm font-bold leading-tight">
-                متجر التطبيقات
+                App Store
               </p>
             </div>
           </button>
 
           <button
             class="bg-black text-white rounded-lg px-3 py-2 flex items-center w-[180px] sm:min-w-[185px] hover:bg-gray-800 transition"
+            dir="ltr"
           >
             <img
               src="./images/playstoreicon.png"
-              alt="أيقونة جوجل بلاي"
-              class="h-6 sm:h-8 ml-2 sm:ml-3"
+              alt="Google Play icon"
+              class="h-6 sm:h-8 mr-2 sm:mr-3"
             />
-            <div class="text-right">
-              <p class="text-[10px] sm:text-xs uppercase">الحصول عليه من</p>
+            <div class="text-left">
+              <p class="text-[10px] sm:text-xs uppercase">Get it on</p>
               <p class="text-xs sm:text-sm font-bold leading-tight">
-                جوجل بلاي
+                Google Play
               </p>
             </div>
           </button>
 
           <button
             class="bg-black text-white rounded-lg px-3 py-2 flex items-center w-[180px] sm:min-w-[185px] hover:bg-gray-800 transition"
+            dir="ltr"
           >
             <img
               src="./images/Vector.png"
-              alt="أيقونة معرض التطبيقات"
-              class="h-6 sm:h-8 ml-2 sm:ml-3"
+              alt="App Gallery icon"
+              class="h-6 sm:h-8 mr-2 sm:mr-3"
             />
-            <div class="text-right">
-              <p class="text-[10px] sm:text-xs uppercase">تحميل من</p>
+            <div class="text-left">
+              <p class="text-[10px] sm:text-xs uppercase">Download on</p>
               <p class="text-xs sm:text-sm font-bold leading-tight">
-                معرض التطبيقات
+                App Gallery
               </p>
             </div>
           </button>
@@ -79,53 +82,53 @@
       </div>
     </div>
 
-    <div class="max-lg:min-w-[140px] w-full sm:w-auto pr-5 lg:pr-5">
+    <div class="max-lg:min-w-[140px] w-full sm:w-auto">
       <h4
         class="text-[#FCB034] font-bold text-lg sm:text-xl lg:text-2xl relative max-sm:cursor-pointer"
       >
-        قائمة المدن
+        City List
       </h4>
       <ul class="mt-6 space-y-4 list-disc pl-5 opacity-75">
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-black text-[#000000] text-sm lg:text-lg font-semibold"
-            >الرياض</a
+            >Riyadh</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >جدة</a
+            >Jeddah</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >الدمام</a
+            >Dammam</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >نيوم</a
+            >NEOM</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >مكة</a
+            >Makkah</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >المدينة</a
+            >Madina</a
           >
         </li>
       </ul>
@@ -133,57 +136,57 @@
         href="javascript:void(0)"
         class="text-[#FCB034] pt-5 text-sm lg:text-lg italic underline font-semibold"
       >
-        عرض الكل
+        View All
       </button>
     </div>
 
-    <div class="max-lg:min-w-[140px] w-full sm:w-auto pr-5 lg:pr-5">
+    <div class="max-lg:min-w-[140px] w-full sm:w-auto">
       <h4
         class="text-[#FCB034] font-bold text-lg sm:text-xl lg:text-2xl relative max-sm:cursor-pointer"
       >
-        قائمة المعدات
+        Equipment List
       </h4>
       <ul class="mt-6 space-y-4 list-disc pl-5 opacity-75">
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-black text-[#000000] text-sm lg:text-lg font-semibold"
-            >شاحنة شوكية</a
+            >Forklift</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >مولد</a
+            >Generator</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >حفارة</a
+            >Excavator</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >لودر عجلي</a
+            >Wheel Loader</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >جريدر</a
+            >Grader</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >شاحنة قلابة</a
+            >Dump Truck</a
           >
         </li>
       </ul>
@@ -191,57 +194,57 @@
         href="javascript:void(0)"
         class="text-[#FCB034] pt-5 text-sm lg:text-lg italic underline font-semibold"
       >
-        عرض الكل
+        View All
       </button>
     </div>
 
-    <div class="max-lg:min-w-[140px] w-full sm:w-auto pr-5 lg:pr-5">
+    <div class="max-lg:min-w-[140px] w-full sm:w-auto">
       <h4
         class="text-[#FCB034] font-bold text-lg sm:text-xl lg:text-2xl relative max-sm:cursor-pointer"
       >
-        قائمة المعدات
+        Equipment List
       </h4>
       <ul class="mt-6 space-y-4 list-disc pl-5 opacity-75">
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-black text-[#000000] text-sm lg:text-lg font-semibold"
-            >من نحن</a
+            >About Us</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >اتصل بنا</a
+            >Contact Us</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >الأسئلة الشائعة</a
+            >FAQs</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >مركز المساعدة</a
+            >Help Center</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >الشروط والأحكام</a
+            >Terms & Conditions</a
           >
         </li>
         <li>
           <a
             href="javascript:void(0)"
             class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-            >سياسة الخصوصية</a
+            >Privacy Policy</a
           >
         </li>
       </ul>
@@ -256,21 +259,21 @@
         id="footer-payment-apple-pay"
         src="./images/apple-pay.png"
         data-key="Footer_Payment_Apple_Pay_Alt"
-        alt="أبل باي"
+        alt="Apple Pay"
         class="h-6 sm:h-8 lg:h-9 w-16 sm:w-18 lg:w-20 object-contain"
       />
       <img
         id="footer-payment-mastercard"
         src="./images/mastercard.png"
         data-key="Footer_Payment_Mastercard_Alt"
-        alt="ماستركارد"
+        alt="Mastercard"
         class="h-6 sm:h-8 lg:h-9 w-16 sm:w-18 lg:w-20 object-contain"
       />
       <img
         id="footer-payment-visa"
         src="./images/visa.png"
         data-key="Footer_Payment_Visa_Alt"
-        alt="فيزا"
+        alt="Visa"
         class="h-6 sm:h-8 lg:h-9 w-16 sm:w-18 lg:w-20 object-contain"
       />
       <img
@@ -284,7 +287,7 @@
         id="footer-payment-mada"
         src="./images/mada-footer.png"
         data-key="Footer_Payment_Mada_Alt"
-        alt="mada"
+        alt="Mada"
         class="h-6 sm:h-8 lg:h-9 w-16 sm:w-18 lg:w-20 object-contain"
       />
     </div>
