--- a/city_ar.html
+++ b/city_ar.html
@@ -53,6 +53,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./css/product.css" />
   </head>
@@ -2025,302 +2026,14 @@
     </section>
 
     <!-- footer Placeholder -->
-    <footer
-      class="tracking-wide lg:mt-16 mt-8 bg-[#FEECCE] px-4 sm:px-6 md:px-10 pt-12 pb-6"
-    >
-      <div
-        class="flex container mx-auto flex-wrap justify-between gap-6 sm:gap-10"
-      >
-        <div class="max-w-md w-full sm:w-auto">
-          <h1 class="text-[#FCB034] text-lg sm:text-xl md:text-3xl font-bold">
-            وسائل تواصلنا الاجتماعية
-          </h1>
-          <div class="w-full h-auto flex gap-2 pt-3 flex-wrap">
-            <img class="w-6" src="./images/insta.svg" alt="إنستغرام" />
-            <img class="w-7" src="./images/whatsapp.svg" alt="واتساب" />
-            <img class="w-6" src="./images/facebook.svg" alt="فيسبوك" />
-            <img class="w-6" src="./images/twitter.svg" alt="تويتر" />
-            <img class="w-6" src="./images/linkdin.svg" alt="لينكدإن" />
-          </div>
-
-          <div class="mt-8">
-            <h1 class="text-[#FCB034] text-lg sm:text-xl md:text-3xl font-bold">
-              البريد الإلكتروني
-            </h1>
-            <p class="text-[#000000] text-sm lg:text-lg">
-              info@saudi-equipment.com
-            </p>
-          </div>
-
-          <div class="mt-8">
-            <h1 class="text-[#FCB034] text-lg sm:text-xl md:text-3xl font-bold">
-              تحميل التطبيق
-            </h1>
-            <div class="mt-4 flex flex-wrap gap-3 sm:gap-4 justify-start">
-              <button
-                class="bg-black text-white rounded-lg px-3 py-2 flex items-center w-[180px] sm:min-w-[185px] hover:bg-gray-800 transition"
-              >
-                <img
-                  src="./images/appleicon.png"
-                  alt="أيقونة آبل"
-                  class="h-6 sm:h-8 ml-2 sm:ml-3"
-                />
-                <div class="text-right">
-                  <p class="text-[10px] sm:text-xs uppercase">تحميل من</p>
-                  <p class="text-xs sm:text-sm font-bold leading-tight">
-                    متجر التطبيقات
-                  </p>
-                </div>
-              </button>
-
-              <button
-                class="bg-black text-white rounded-lg px-3 py-2 flex items-center w-[180px] sm:min-w-[185px] hover:bg-gray-800 transition"
-              >
-                <img
-                  src="./images/playstoreicon.png"
-                  alt="أيقونة جوجل بلاي"
-                  class="h-6 sm:h-8 ml-2 sm:ml-3"
-                />
-                <div class="text-right">
-                  <p class="text-[10px] sm:text-xs uppercase">الحصول عليه من</p>
-                  <p class="text-xs sm:text-sm font-bold leading-tight">
-                    جوجل بلاي
-                  </p>
-                </div>
-              </button>
-
-              <button
-                class="bg-black text-white rounded-lg px-3 py-2 flex items-center w-[180px] sm:min-w-[185px] hover:bg-gray-800 transition"
-              >
-                <img
-                  src="./images/Vector.png"
-                  alt="أيقونة معرض التطبيقات"
-                  class="h-6 sm:h-8 ml-2 sm:ml-3"
-                />
-                <div class="text-right">
-                  <p class="text-[10px] sm:text-xs uppercase">تحميل من</p>
-                  <p class="text-xs sm:text-sm font-bold leading-tight">
-                    معرض التطبيقات
-                  </p>
-                </div>
-              </button>
-            </div>
-          </div>
-        </div>
-
-        <div class="max-lg:min-w-[140px] w-full sm:w-auto pr-5 lg:pr-5">
-          <h4
-            class="text-[#FCB034] font-bold text-lg sm:text-xl lg:text-2xl relative max-sm:cursor-pointer"
-          >
-            قائمة المدن
-          </h4>
-          <ul class="mt-6 space-y-4 list-disc pl-5 opacity-75">
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-black text-[#000000] text-sm lg:text-lg font-semibold"
-                >الرياض</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >جدة</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >الدمام</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >نيوم</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >مكة</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >المدينة</a
-              >
-            </li>
-          </ul>
-          <button
-            href="javascript:void(0)"
-            class="text-[#FCB034] pt-5 text-sm lg:text-lg italic underline font-semibold"
-          >
-            عرض الكل
-          </button>
-        </div>
-
-        <div class="max-lg:min-w-[140px] w-full sm:w-auto pr-5 lg:pr-5">
-          <h4
-            class="text-[#FCB034] font-bold text-lg sm:text-xl lg:text-2xl relative max-sm:cursor-pointer"
-          >
-            قائمة المعدات
-          </h4>
-          <ul class="mt-6 space-y-4 list-disc pl-5 opacity-75">
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-black text-[#000000] text-sm lg:text-lg font-semibold"
-                >شاحنة شوكية</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >مولد</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >حفارة</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >لودر عجلي</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >جريدر</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >شاحنة قلابة</a
-              >
-            </li>
-          </ul>
-          <button
-            href="javascript:void(0)"
-            class="text-[#FCB034] pt-5 text-sm lg:text-lg italic underline font-semibold"
-          >
-            عرض الكل
-          </button>
-        </div>
-
-        <div class="max-lg:min-w-[140px] w-full sm:w-auto pr-5 lg:pr-5">
-          <h4
-            class="text-[#FCB034] font-bold text-lg sm:text-xl lg:text-2xl relative max-sm:cursor-pointer"
-          >
-            قائمة المعدات
-          </h4>
-          <ul class="mt-6 space-y-4 list-disc pl-5 opacity-75">
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-black text-[#000000] text-sm lg:text-lg font-semibold"
-                >من نحن</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >اتصل بنا</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >الأسئلة الشائعة</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >مركز المساعدة</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >الشروط والأحكام</a
-              >
-            </li>
-            <li>
-              <a
-                href="javascript:void(0)"
-                class="hover:text-[#000000] text-[#000000] text-sm lg:text-lg font-semibold"
-                >سياسة الخصوصية</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <hr class="mt-10 mb-6 border-[#FFC15C]" />
-
-      <div class="flex justify-center items-center py-1">
-        <div class="flex flex-wrap justify-center gap-3 sm:gap-4 lg:gap-5">
-          <img
-            id="footer-payment-apple-pay"
-            src="./images/apple-pay.png"
-            data-key="Footer_Payment_Apple_Pay_Alt"
-            alt="أبل باي"
-            class="h-6 sm:h-8 lg:h-9 w-16 sm:w-18 lg:w-20 object-contain"
-          />
-          <img
-            id="footer-payment-mastercard"
-            src="./images/mastercard.png"
-            data-key="Footer_Payment_Mastercard_Alt"
-            alt="ماستركارد"
-            class="h-6 sm:h-8 lg:h-9 w-16 sm:w-18 lg:w-20 object-contain"
-          />
-          <img
-            id="footer-payment-visa"
-            src="./images/visa.png"
-            data-key="Footer_Payment_Visa_Alt"
-            alt="فيزا"
-            class="h-6 sm:h-8 lg:h-9 w-16 sm:w-18 lg:w-20 object-contain"
-          />
-          <img
-            id="footer-payment-snb"
-            src="./images/snb-footer.png"
-            data-key="Footer_Payment_SNB_Alt"
-            alt="SNB"
-            class="h-6 sm:h-8 lg:h-9 w-16 sm:w-18 lg:w-20 object-contain"
-          />
-          <img
-            id="footer-payment-mada"
-            src="./images/mada-footer.png"
-            data-key="Footer_Payment_Mada_Alt"
-            alt="mada"
-            class="h-6 sm:h-8 lg:h-9 w-16 sm:w-18 lg:w-20 object-contain"
-          />
-        </div>
-      </div>
-    </footer>
+    <div id="footer"></div>
   </body>
-
+  <script>
+    $(document).ready(function () {
+      console.log("jquery is working");
+      $("#footer").load("footer_ar.html");
+    });
+  </script>
   <script src="./js/scripts.js"></script>
 
   <script>
