--- a/city_en.html
+++ b/city_en.html
@@ -53,6 +53,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./css/product.css" />
   </head>
@@ -1866,7 +1867,7 @@
     </section>
 
     <!-- Include Footer -->
-    <footer class="tracking-wide lg:mt-16 mt-8 bg-[#FEECCE] px-4 sm:px-6 md:px-10 pt-12 pb-6">
+    <!-- <footer class="tracking-wide lg:mt-16 mt-8 bg-[#FEECCE] px-4 sm:px-6 md:px-10 pt-12 pb-6">
       <div class="flex container mx-auto flex-wrap justify-between gap-6 sm:gap-10">
           <div class="max-w-md w-full sm:w-auto">
               <h1 class="text-[#FCB034] text-lg sm:text-xl md:text-3xl font-bold">Our Socials</h1>
@@ -1963,12 +1964,22 @@
               <img id="footer-payment-mada" src="./images/mada-footer.png" data-key="Footer_Payment_Mada_Alt" alt="Mada" class="h-6 sm:h-8 lg:h-9 w-16 sm:w-18 lg:w-20 object-contain">
           </div>
       </div>
-  </footer>
+  </footer> -->
+    <!-- index.html -->
 
-  </body>
+
+  
+  <div id="footer"></div>
+ </body>
+
+  <script>
+    $(document).ready(function() {
+      console.log("jquery is working");
+      $("#footer").load("footer_en.html");
+    });
+  </script>
 
   <script src="./js/scripts.js"></script>
-
   <script>   
      function changeHeroImage(newSrc) {
       document.getElementById('heroImage').src = newSrc;
