--- a/city_en.html
+++ b/city_en.html
@@ -55,7 +55,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./css/product.css" />
+    <link rel="stylesheet" href="./css/city.css" />
   </head>
 
   <body>
@@ -2042,7 +2042,7 @@
 
       // Initialize sliders
       const currentPage = window.location.pathname;
-      const currentLang = currentPage.includes('product_en.html') ? 'en' : 'ar';
+      const currentLang = currentPage.includes('city.html') ? 'en' : 'ar';
       const isRTL = currentLang === 'ar';
       
       // Shuffle slides for each slider before initialization
